# assessment-repo

./: .env.example  .gitignore  LICENSE  Makefile  PLAN.md.template  README.md  docker-compose.yml
.claude/: settings.local.json
.github/workflows/: deploy.yml
apps/api/: .dockerignore  Dockerfile  pyproject.toml  pyrightconfig.json
apps/api/src/: config.py  main.py
apps/api/src/agents/: builder.py  prompts.py
apps/api/src/mcp/: client.py
apps/api/src/middleware/: logging.py
apps/api/src/routes/: agent.py  health.py
apps/api/src/schemas/: events.py  requests.py  responses.py
apps/api/src/services/: runner.py  tracing.py
apps/api/src/utils/: ids.py
apps/api/tests/: conftest.py  test_agent_routes.py  test_health.py
apps/web/: .dockerignore  Dockerfile  README.md  next.config.ts  package.json  pnpm-lock.yaml
apps/web/src/app/: globals.css  layout.tsx  page.tsx
apps/web/src/components/: chat-input.tsx  chat-message.tsx  health-indicator.tsx  prompt-form.tsx  result-card.tsx  tool-call-list.tsx  tool-calls.tsx
apps/web/src/hooks/: use-agent-stream.ts  use-chat.ts
apps/web/src/lib/: api.ts  types.ts
docs/: arc.md  video1.md  video3.md
evals/: README.md  cases.json  run.py
infra/: artifact_registry.tf  cloud_run.tf  main.tf  outputs.tf  secrets.tf  terraform.tfvars.example  variables.tf  wif.tf
scripts/: list_tools.py  pre_warm.sh  smoke.sh
